# ktop

./: .gitignore  Cargo.toml  README.md  install.sh  uninstall.sh  update.sh
.github/workflows/: rust.yml
src/: main.rs  system.rs  ui.rs
